--- a/classification/studentFinalScore_capstone.ipynb
+++ b/classification/studentFinalScore_capstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNSVeCI1Mv3XBW0QoSGRUML",
+      "authorship_tag": "ABX9TyPr+QdG5B274l8ziNYZfvER",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "\n",
         "---\n",
         "\n",
-        "**Proyek Klasifikasi Skor Akhir Siswa🎓**\n",
+        "**Proyek Klasifikasi Skor Akhir Siswa🏫**\n",
         "\n",
         "Proyek ini bertujuan untuk membangun model prediktif yang mampu mengklasifikasikan skor akhir siswa (`BAIK` / `CUKUP`) berdasarkan berbagai atribut siswa dan **data akademis**. **Tujuan utama** adalah untuk **mengidentifikasi faktor-faktor kunci** yang memengaruhi **kinerja siswa** dan mengembangkan alat untuk memprediksi keberhasilan mereka.\n",
         "\n",
@@ -62,7 +62,10 @@
         "**Implementasi model ini dapat mendukung pengambilan keputusan berbasis data untuk meningkatkan hasil belajar siswa.**\n",
         "\n",
         "**Penambahan nilai-nilai spesifik untuk metrik evaluasi akan memberikan gambaran yang lebih konkret tentang kinerja model dan alasan di balik kesimpulan tentang SMOTE.**\n",
-        "✎ᝰ.📓🗒 ˎˊ˗\n",
+        "\n",
+        "˙✧˖°🎓 ༘⋆｡ ˚\n",
+        "\n",
+        "\n",
         "---\n"
       ],
       "metadata": {
